[gd_scene load_steps=10 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://objects/player.gd" id="1_ffboj"]
[ext_resource type="Resource" uid="uid://cu2gtxlcmbb34" path="res://weapons/blaster-repeater.tres" id="2_6epbw"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="2_b0fo8"]
[ext_resource type="Resource" uid="uid://c56y8pqoyk15f" path="res://weapons/blaster.tres" id="3_kr4p8"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://sprites/burst_animation.tres" id="4_m6ukc"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://sounds/walking.ogg" id="5_ics1s"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3aoqg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3ocir"]
properties/0/path = NodePath(".:rotation")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("Head/Camera:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:weapon_index")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 2
script = ExtResource("1_ffboj")
weapons = Array[Resource("res://scripts/weapon.gd")]([ExtResource("2_6epbw"), ExtResource("3_kr4p8")])

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
mesh = SubResource("CapsuleMesh_3aoqg")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="# DO NOT ENABLE CURRENT ON CAMERA" type="Node" parent="Head"]

[node name="Camera" type="Camera3D" parent="Head"]
cull_mask = 1048573
fov = 80.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CameraItem" type="Camera3D" parent="Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1047554
fov = 40.0

[node name="Container" type="Node3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -1, -2.25)

[node name="Muzzle" type="AnimatedSprite3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -0.75, -6)
layers = 2
sprite_frames = ExtResource("4_m6ukc")
frame = 2

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -10)
collision_mask = 3
collide_with_areas = true

[node name="Visual" type="Node3D" parent="Head/Camera"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, -0.3, 0.5, -0.3, -0.727)
visible = false

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("2_b0fo8")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ics1s")
volume_db = -5.0

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Reload Timer" type="Timer" parent="."]
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3ocir")

[connection signal="timeout" from="Reload Timer" to="." method="_on_reload_timer_timeout"]
